tests/ui/fail_fields_of_enum_must_be_a_field.stderr
error: fields of enum variant must be a field
  --> tests/ui/fail_fields_of_enum_must_be_a_field.rs:31:5
   |
31 |     Unit,
   |     ^^^^
...
34 | #[thin_delegate::derive_delegate(external_trait_def = __external_trait_def)]
   | ---------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__thin_delegate__feed_structenum_def_for_Unit` which comes from the expansion of the attribute macro `thin_delegate::derive_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fields of enum variant must be a field
  --> tests/ui/fail_fields_of_enum_must_be_a_field.rs:23:12
   |
23 |     Unnamed(String, String),
   |            ^^^^^^^^^^^^^^^^
...
26 | #[thin_delegate::derive_delegate(external_trait_def = __external_trait_def)]
   | ---------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__thin_delegate__feed_structenum_def_for_Unnamed` which comes from the expansion of the attribute macro `thin_delegate::derive_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fields of enum variant must be a field
  --> tests/ui/fail_fields_of_enum_must_be_a_field.rs:12:11
   |
12 |       Named {
   |  ___________^
13 | |         x: String,
14 | |         y: String,
15 | |     },
   | |_____^
...
18 |   #[thin_delegate::derive_delegate(external_trait_def = __external_trait_def)]
   |   ---------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__thin_delegate__feed_structenum_def_for_Named` which comes from the expansion of the attribute macro `thin_delegate::derive_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
